--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ main {
 
 /* Sidebar */
 .sidebar {
-  background: rgb(0, 7, 61);
+  background: rgb(0, 7, 83);
   color: white;
   height: 100vh;
   overflow-y: auto;
@@ -32,8 +32,12 @@ main {
   padding: 15px 10px;
 }
 .logo {
-  font-size: 18px;
+  font-size: 40px;
   line-height: 0;
+}
+.kpdm {
+  width:50px;
+  padding-left: 8px;
 }
 .bars {
   width: 30px;
@@ -46,16 +50,17 @@ main {
   display: flex;
   align-items: center;
   margin: 10px 0;
-  height: 30px;
+  height: 60px;
   padding: 10px;
 }
 .search input {
+  height: 28px;
   border: none;
   margin-left: 10px;
   border-radius: 5px;
-  background: rgb(238, 238, 238);
+  background: rgb(245, 245, 248);
 
-  color: white;
+  color: rgb(25, 7, 66);
 }
 
 .routes {
